--- a/style.css
+++ b/style.css
@@ -97,9 +97,9 @@ p {
 	padding-top: auto;
 }
 
-.page-header nav li:last-child {
+/* .page-header nav li:last-child {
 	margin-right: 0;
-}
+} */
 
 .page-header nav li em {
 	display: block;
@@ -109,9 +109,100 @@ p {
 
 nav ul {
 	display: flex;
-	
+	/* margin-right: 2qw; */
 }
 
+/* Mobile Menu */
+@media (max-width: 768px) {
+    .menu {
+        display: none;
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 70%;
+        height: 100%;
+        background-color: #0b0a0a;
+        transition: transform 0.3s ease opacity 0.3s ease;
+        z-index: 1000;
+        transform: translateX(250px);
+		opacity: 0;
+    }
+
+    .menu.active {
+        transform: translateX(0);
+		opacity: 1;
+		display: block;
+    }
+
+    .menu ul {
+        list-style: none;
+        padding: 0;
+		margin-top: 50px;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		padding: 40px;
+    }
+
+    .menu li {
+        /* margin-bottom: 20px; */
+		opacity: 0;
+		transform: translateY(20px); 
+		transition: opacity 0.5s ease, transform 0.5s ease;
+		margin-bottom: 50px;
+    }
+
+	.menu.active li {
+		opacity: 1;
+		transform: translateY(0);; 
+		transition-delay: 0.6s;
+	}
+    .menu-toggle {
+        display: block;
+        position: relative;
+        cursor: pointer;
+        z-index: 1500;
+		right: 50px;
+    }
+
+    .hamburger,
+    .hamburger:before,
+    .hamburger:after {
+        content: '';
+        display: block;
+        background-color: #000;
+        height: 3px;
+        width: 30px;
+		padding-right: 30px;
+        border-radius: 5px;
+        position: absolute;
+        transition: all 0.3s ease;
+    }
+
+    .hamburger:before {
+        top: -8px;
+    }
+
+    .hamburger:after {
+        bottom: -8px;
+    }
+
+    .menu-toggle.active .hamburger {
+        transform: rotate(45deg);
+		background-color: white;
+    }
+
+    .menu-toggle.active .hamburger:before {
+        transform: rotate(90deg);
+        top: 0;
+		background-color: white;
+    }
+
+    .menu-toggle.active .hamburger:after {
+        display: none;
+    }
+}
 /*==================
 	claims
 ===================*/
@@ -148,12 +239,12 @@ nav ul {
 		margin-bottom: 0px;
 	}
 	
-	@media (max-width: 796px) {
+	/* @media (max-width: 428px) {
 		.section {
 			padding: 5px;
 		}
 		
-	}
+	} */
 /*==================
 	Main Visual
 ====================*/
