--- a/style.css
+++ b/style.css
@@ -338,15 +338,7 @@ nav ul {
 	color: #9b9b9b;
 	font-size: 1rem;
 	height: 70px;
-	
-}
-
-.page-footer .copyright {
-	/* float: left; */
-}
-
-.page-footer .credits {
-	/* float: right; */
+	width: 58.75rem;
 }
 
 .page-footer-content {
